<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="152dp"
        android:layout_height="116dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/header_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_text"
        android:textColor="@color/primaryColor"
        android:textSize="24sp"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username_hint"
        android:paddingStart="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/edit_text_text"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="16sp"
        tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="password"
        android:paddingStart="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/edit_text_text"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="16sp"
        tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,VisualLintTextFieldSize" />



    <Button
        android:id="@+id/loginButton"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:text="Sign Up"
        android:textColor="#ffffff"
        android:backgroundTint="@color/buttonColor"
        android:textSize="16sp"
        tools:ignore="HardcodedText,VisualLintButtonSize" />
</LinearLayout>