<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageView
        android:layout_width="152dp"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/header_image_desc"
        android:src="@drawable/img" />
    <TextView
        android:id="@+id/Get_Started_text"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/Get_Started_text"
        android:fontFamily="@font/parkinsans_bold"

        android:textColor="@color/buttonColor"
        android:textSize="22sp"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username_hint"
        android:fontFamily="@font/parkinsans_regular"
        android:paddingStart="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/edit_text_text"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="16sp"
        tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="password"
        android:fontFamily="@font/parkinsans_regular"
        android:paddingStart="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/edit_text_text"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="16sp"
        tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="confirm of  Password"
        android:fontFamily="@font/parkinsans_regular"
        android:paddingStart="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/edittext_background"
        android:textColor="@color/edit_text_text"
        android:textColorHint="@color/edit_text_hint"
        android:textSize="16sp"
        tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <!-- Spinner pour choisir le rôle (Utilisateur ou Admin) -->
    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:theme="@style/EditTextStyle"
        android:entries="@array/role_options"
        android:padding="12dp"
        tools:ignore="TouchTargetSizeCheck"
        android:background="@drawable/edittext_background"
        android:textColor="@color/primaryColor"/>

    <!-- Bouton pour se connecter -->
    <Button
        android:id="@+id/signInButton"
        style="@style/ButtonStyle"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:theme="@style/EditTextStyle"
        android:padding="12dp"
        android:text="Sign In"
        android:fontFamily="@font/parkinsans_bold"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

</LinearLayout>
